[package]
name = "archival"
version = "0.4.1"
edition = "2021"
license = "Unlicense"
description = "The simplest CMS in existence"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "archival"
path = "src/lib.rs"

[features]
default = ["binary"]
typescript = ["dep:typescript-type-def"]
binary = [
    "dep:ctrlc",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:tiny_http",
    "dep:mime_guess",
    "dep:clap",
    "dep:semver",
    "stdlib-fs",
]
stdlib-fs = ["dep:notify", "dep:fs_extra", "dep:walkdir"]

[[bin]]
name = "archival"
path = "src/main.rs"

[dependencies]
# binary
ctrlc = { version = "3.4.2", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }
tiny_http = { version = "0.12.0", optional = true }
mime_guess = { version = "2", optional = true }
clap = { version = "4.5.1", optional = true, features = ["cargo"] }
tokio = { version = "1.36.0", features = ["sync"], optional = true }
semver = { version = "1.0.22", optional = true }
# stdlib-fs
walkdir = { version = "2.3.3", optional = true }
fs_extra = { version = "1.3.0", optional = true }
notify = { version = "6.1.1", optional = true }
futures = { version = "0.3.30", features = ["executor"] }
# typescript
typescript-type-def = { version = "0.5.9", optional = true }
# shared
liquid = "0.26.1"
serde = "1.0.152"
toml = { version = "0.7.1", features = ["display", "preserve_order"] }
comrak = "0.18"
liquid-core = "0.26.4"
liquid-lib = { version = "0.26.4", features = ["shopify", "extra"] }
regex = "1.10.2"
thiserror = "1.0.56"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
toml_datetime = "0.6.5"
tracing = "0.1.37"
time = { version = "0.3.31", features = ["local-offset"] }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.113"
tempfile = "3.5.0"
tracing-test = "0.2.4"
wasm-bindgen-test = "0.3.0"
