[package]
name = "archival"
version = "0.5.4"
edition = "2021"
license = "Unlicense"
description = "The simplest CMS in existence"
repository = "https://github.com/jesseditson/archival"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "archival"
path = "src/lib.rs"

[features]
default = ["binary", "import-csv"]
dhat-heap = ["dep:dhat"]
gen-traces = ["binary", "dep:tracing-chrome"]
typescript = ["dep:typescript-type-def"]
binary = [
    "stdlib-fs",
    "dep:ctrlc",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:tiny_http",
    "dep:clap",
    "dep:nanoid",
    "dep:indicatif",
    "dep:reqwest",
    "dep:home",
    "dep:rsa",
    "dep:rand",
    "dep:base64",
    "dep:urlencoding",
    "dep:serde_json",
]
import-csv = ["dep:csv"]
stdlib-fs = ["dep:notify", "dep:fs_extra", "dep:walkdir"]

[[bin]]
name = "archival"
path = "src/main.rs"

[profile.release]
# debug = true
codegen-units = 1
lto = false
opt-level = "s"

[dependencies]
# profiling
dhat = { version = "0.3.3", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
# binary
ctrlc = { version = "3.4.2", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }
tiny_http = { version = "0.12.0", optional = true }
clap = { version = "4.5.1", optional = true, features = ["cargo"] }
tokio = { version = "1.36.0", features = ["sync"], optional = true }
nanoid = { version = "0.4.0", optional = true }
indicatif = { version = "0.17.8", optional = true }
reqwest = { version = "0.11.24", features = [
    "blocking",
    "rustls-tls",
    "json",
], default-features = false, optional = true }
serde_json = { version = "1.0.113", optional = true }
home = { version = "0.5.9", optional = true }
rsa = { version = "0.9.6", optional = true, features = ["sha2"] }
rand = { version = "0.8.5", optional = true }
base64 = { version = "0.22.0", optional = true }
urlencoding = { version = "2.1.3", optional = true }
# stdlib-fs
walkdir = { version = "2.3.3", optional = true }
fs_extra = { version = "1.3.0", optional = true }
notify = { version = "6.1.1", optional = true }
futures = { version = "0.3.30", features = ["executor"] }
# typescript
typescript-type-def = { version = "0.5.9", optional = true }
# import-csv
csv = { version = "1.3.0", optional = true }
# shared
liquid = "0.26.1"
serde = "1.0.152"
toml = { version = "0.7.1", features = ["display", "preserve_order"] }
comrak = "0.18"
liquid-core = "0.26.4"
liquid-lib = { version = "0.26.4", features = ["shopify", "extra"] }
regex = "1.10.2"
thiserror = "1.0.56"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
toml_datetime = "0.6.5"
tracing = "0.1.37"
time = { version = "0.3.31", features = ["local-offset"] }
semver = "1.0.22"
once_cell = "1.19.0"
data-encoding = "2.5.0"
mime_guess = { version = "2" }
sha2 = "0.10.8"

[dev-dependencies]
serde_json = "1.0.113"
tempfile = "3.5.0"
tracing-test = "0.2.4"
wasm-bindgen-test = "0.3.0"
