[package]
name = "archival"
version = "0.12.2"
edition = "2021"
license = "Unlicense"
description = "The simplest CMS in existence"
repository = "https://github.com/jesseditson/archival"

[lib]
name = "archival"
path = "src/lib.rs"

[features]
default = ["binary", "import-csv", "json-schema"]
dhat-heap = ["dep:dhat"]
gen-traces = ["binary", "dep:tracing-chrome"]
typescript = ["dep:typescript-type-def"]
binary = [
    "stdlib-fs",
    "dep:ctrlc",
    "dep:tracing-subscriber",
    "dep:tiny_http",
    "dep:clap",
    "dep:nanoid",
    "dep:indicatif",
    "dep:reqwest",
    "dep:home",
    "dep:rsa",
    "dep:rand",
    "dep:base64",
    "json-schema",
]
import-csv = ["dep:csv"]
json-schema = []
stdlib-fs = ["dep:notify", "dep:walkdir"]
verbose-logging = []

[[bin]]
name = "archival"
path = "src/main.rs"

[profile.release]
# debug = true
codegen-units = 1
lto = false
opt-level = "s"

[dependencies]
# profiling
dhat = { version = "0.3.3", optional = true }
tracing-chrome = { version = "0.7.2", optional = true }
# binary
ctrlc = { version = "3.4.2", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
], optional = true }
tiny_http = { version = "0.12.0", optional = true }
clap = { version = "4.5.1", optional = true, features = ["cargo", "derive"] }
nanoid = { version = "0.4.0", optional = true }
indicatif = { version = "0.18", optional = true }
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
    "json",
], default-features = false, optional = true }
serde_json = { version = "1.0.113" }
home = { version = "0.5.9", optional = true }
rsa = { version = "0.9.6", optional = true, features = ["sha2"] }
rand = { version = "0.8.5", optional = true }
base64 = { version = "0.22.0", optional = true }
# stdlib-fs
walkdir = { version = "2.3.3", optional = true }
notify = { version = "8.2", optional = true }
futures = { version = "0.3.30", features = ["executor"] }
# typescript
typescript-type-def = { version = "0.5.9", optional = true }
# import-csv
csv = { version = "1.3.0", optional = true }
# shared
liquid = "0.26.1"
serde = "1.0.152"
toml = { version = "0.9", features = ["display", "preserve_order"] }
comrak = "0.41"
liquid-core = "0.26.4"
liquid-lib = { version = "0.26.4", features = ["shopify", "extra"] }
regex = "1.10.2"
thiserror = "2.0"
zip = { version = "4.5", default-features = false, features = ["deflate"] }
toml_datetime = "0.7"
tracing = "0.1.37"
time = { version = "0.3.36", features = ["local-offset", "formatting"] }
semver = "1.0.22"
once_cell = "1.19.0"
data-encoding = "2.5.0"
mime_guess = { version = "2" }
sha2 = "0.10.8"
seahash = "4.1.0"
indefinite = "0.1.9"
pluralizer = "0.5.0"
urlencoding = "2.1.3"
ordermap = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0.113"
tempfile = "3.5.0"
tracing-test = "0.2.4"
wasm-bindgen-test = "0.3.0"
jsonschema = "0.26.1"
